src/main/web/skin/notification-center.css
.notification_center {
	display:none;
	width: 320px;
	height: 100%;
	margin-left: 100%;
	position: absolute;
	background-color: #404040;
	color: #fff;
	z-index: 100000;
	overflow-x: auto;
}

.notification_item {
	margin: 10px;
}

.notification_item div {
	width: 100%;
	font-size: 14px;
	word-wrap: break-word;
	overflow-wrap: break-word;
}

.notification_item div img {
	height: 16px;
	width: 16px;
	margin-right: 2px;
	border-radius: 3px;
}

.notification_post_date, .notification_content {
	font-size: 12px;
	color: #ddd;
	margin-left: 5px;
}

.notification_content {
	margin-top: 5px;
}

.notification_old_view_btn {
	text-align: center;
	cursor: pointer;
	margin-top: -7px;
	padding: 10px 0;
}

.notification_old_view_btn:hover {
	background-color: #787878;
}

.notification_old_view_btn a {
	color: #eeeeee;
	text-decoration: none;
}

.notification_noitem_label {
	text-align: center;
	color: #ddd;
	padding: 10px 0 0 0;
	font-size: 14px;
}

#notification-hide-box {
	position: fixed;
	top: 0;
	left: 0;
	zIndex: 10000;
	cursor: pointer;
}

.notification_center_slidein {
	animation: slidein 0.5s;
	animation-iteration-count: 1;
	animation-fill-mode: forwards;
	-webkit-animation: slidein 0.5s;
	-webkit-animation-iteration-count: 1;
	-webkit-animation-fill-mode: forwards;
}

.notification_center_slideout {
	animation: slideout 0.5s;
	animation-iteration-count: 1;
	animation-fill-mode: forwards;
	-webkit-animation: slideout 0.5s;
	-webkit-animation-iteration-count: 1;
	-webkit-animation-fill-mode: forwards;
}

@keyframes slidein {
	0% { margin-left: 0; margin-right: 0; }
	100% { margin-left: -320px; margin-right: 320px; }
}

@-webkit-keyframes slidein {
	0% { margin-left: 0; margin-right: 0; }
	100% { margin-left: -320px; margin-right: 320px; }
}

@keyframes slideout {
	0% { margin-left: -320px; margin-right: 320px; }
	100% { margin-left: 0; margin-right: 0; }
}

@-webkit-keyframes slideout {
	0% { margin-left: -320px; margin-right: 320px; }
	100% { margin-left: 0; margin-right: 0; }
}

.notification_icon {
    max-height: 19px;
    overflow: hidden;
    padding: 4px 0 0 5px;
    cursor:pointer;
}

.notification_icon_badge {
	cursor: pointer;
	margin-left:14px;
	margin-top: -1px;
	font-size: 12px;
	height: 16px;
	width: 16px;
	border-radius: 50%;
	background-color: #f00;
	color: #fff;
	position: absolute;
	text-align: center;
	z-index: 10000
}

.notification_icon_arrival {
	animation: arrival 1s;
	animation-iteration-count: infinite;
	-webkit-animation: arrival 1s;
	-webkit-animation-iteration-count: infinite;
}

@keyframes arrival {
	0% { transform: rotate(0deg)  }
	25% { transform: rotate(10deg) }
	50% { transform: rotate(0deg) }
	75% { transform: rotate(-10deg) }
	100% { transform: rotate(0deg)  }
}

@-webkit-keyframes arrival {
	0% { transform: rotate(0deg)  }
	25% { transform: rotate(10deg) }
	50% { transform: rotate(0deg) }
	75% { transform: rotate(-10deg) }
	100% { transform: rotate(0deg)  }
}

